# KotlinBox-WanAndroid

./: .gitignore  README.md  build.gradle  dependencies.gradle  gradle.properties  settings.gradle
app/: build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app_plugin/: build.gradle
common/: build.gradle
common/src/main/: AndroidManifest.xml
gradle/wrapper/: gradle-wrapper.properties
home/: build.gradle
home/src/main/: AndroidManifest.xml
kb_common/: build.gradle
kb_common/src/main/: AndroidManifest.xml
kb_common/src/main/manifest/: AndroidManifest.xml
kb_exp/: build.gradle
kb_exp/src/main/: AndroidManifest.xml
kb_exp/src/main/cpp/: CMakeLists.txt
kb_exp/src/main/cpp/hookmalloc/: CMakeLists.txt  HookMalloc.cpp
kb_exp/src/main/cpp/malloc/: CMakeLists.txt  TestMalloc.cpp
kb_exp/src/main/manifest/: AndroidManifest.xml
kb_home/: build.gradle
kb_home/src/main/: AndroidManifest.xml
kb_home/src/main/manifest/: AndroidManifest.xml
kb_me/: build.gradle
kb_me/src/main/: AndroidManifest.xml
kb_me/src/main/manifest/: AndroidManifest.xml
kb_navigation/: build.gradle
kb_navigation/src/main/: AndroidManifest.xml
kb_navigation/src/main/manifest/: AndroidManifest.xml
kb_project/src/main/: AndroidManifest.xml
kb_project/src/main/manifest/: AndroidManifest.xml
kb_user/: build.gradle
kb_user/src/main/: AndroidManifest.xml
kb_user/src/main/manifest/: AndroidManifest.xml
kb_web/src/main/: AndroidManifest.xml
kb_web/src/main/manifest/: AndroidManifest.xml
login/: build.gradle
login/src/main/: AndroidManifest.xml
(+244 files in other folders)
